--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <h4>BEFORE CLICKING ON THE LINK CHECK THE STEPS TO DOWNLOAD:-</h4>
 
-<img src="C:\Users\DELL\Pictures\Screenshots\Screenshot (31).png">
+<img src="file:///C:/Users/DELL/Pictures/Screenshots/Screenshot%20(31).png">
 <H2>1.SEARCH THE GAME YOU WANT TO PLAY</H2>
 <img src="C:\Users\DELL\Pictures\Screenshots\Screenshot (32).png">
 <H2>2.SCROLL DOWN AND CLICK ON THE DOWNLOAD BUTTON</H2>
